--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/auth-ui-react": "^0.3.6",
     "@supabase/supabase-js": "^2.21.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
